# open_calib_lidar2camera

./: CMakeLists.txt  README.md
config/: calib_chessboard.json
include/: ceres_lidar2cam.hpp  common.hpp  extract_img.hpp  extract_pc.hpp
src/: main_lidar2camera.cpp
